@@ -687,6 +687,19 @@ class PrimaryHDU(_ImageBaseHDU):
                ('GROUPS' not in header or header['GROUPS'] != True) and \
                card.value == True
 
+    def _verify(self, option='warn'):
+        errs = super(PrimaryHDU, self)._verify(option=option)
+
+        # Verify location and value of mandatory keywords.
+        # The EXTEND keyword is only mandatory if the HDU has extensions; this
+        # condition is checked by the HDUList object.  However, if we already
+        # have an EXTEND keyword check that its position is correct
+        if 'EXTEND' in self._header:
+            naxis = self._header.get('NAXIS', 0)
+            self.req_cards('EXTEND', naxis + 3, lambda v: isinstance(v, bool),
+                           True, option, errs)
+        return errs
+
 
 class ImageHDU(_ImageBaseHDU, ExtensionHDU):
     """
